--- a/views/q_xw.ejs
+++ b/views/q_xw.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel='stylesheet' href='/stylesheets/style.css'>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
   <title></title>
   <style media="screen">
     * {
@@ -231,9 +231,12 @@
     height: 2px;
     line-height: 43px;
     padding: 12px 50px 45px;
-    background: url("/images/rate.jpg") no-repeat 6px 13px;
+    background: url("images/rate.jpg") no-repeat 6px 13px;
     border-bottom: 1px solid #c6cbcf;
     }
+
+
+
 
 
   </style>
@@ -493,7 +496,7 @@
           </div>
 
 
-          <div class="" style="width:808px;">
+          <div class="" style="width:808px;height: 1000px;">
             <div class="history_content">
               <span class="history_bs"></span>
               <div class="history_now">现在</div>
@@ -501,7 +504,7 @@
                 <div>
                   <span class="history_2014">2017</span>
                   <i class="his-tl">▼</i>
-                  <img class="hidden-xs" src="/images/history_rec.jpg" />
+                  <img class="hidden-xs" src="images/history_rec.jpg" />
                   <p class="hidden-xs">07月13日</p>
                   <dl>
                     <dt>2017年07月13日</dt>
@@ -514,7 +517,7 @@
                 </div>
                 <div>
                   <i class="his-tl">▼</i>
-                  <img src="/images/history_rec.jpg" alt="">
+                  <img src="images/history_rec.jpg" alt="">
                   <p>06月30日</p>
                   <dl>
                     <dt>2017年06月30日</dt>
@@ -526,7 +529,7 @@
                 </div>
                 <div>
                   <i class="his-tl">▼</i>
-                  <img src="/images/history_rec.jpg" alt="">
+                  <img src="images/history_rec.jpg" alt="">
                   <p>05月30日</p>
                   <dl>
                     <dt>2017年05月30日</dt>
@@ -538,7 +541,7 @@
                 </div>
                 <div>
                   <i class="his-tl">▼</i>
-                  <img src="/images/history_rec.jpg" alt="">
+                  <img src="images/history_rec.jpg" alt="">
                   <p>04月27日</p>
                   <dl>
                     <dt>2017年04月27日</dt>
@@ -550,7 +553,7 @@
                 </div>
                 <div>
                   <i class="his-tl">▼</i>
-                  <img src="/images/history_rec.jpg" alt="">
+                  <img src="images/history_rec.jpg" alt="">
                   <p>01月20日</p>
                   <dl>
                     <dt>2017年01月20日</dt>
@@ -563,7 +566,7 @@
                 <div>
                   <span class="history_2014">2016</span>
                   <i class="his-tl">▼</i>
-                  <img class="hidden-xs" src="/images/history_rec.jpg" />
+                  <img class="hidden-xs" src="images/history_rec.jpg" />
                   <p class="hidden-xs">12月19日</p>
                   <dl>
                     <dt>2016年12月19日</dt>
@@ -576,7 +579,7 @@
                 </div>
                 <div>
                   <i class="his-tl">▼</i>
-                  <img src="/images/history_rec.jpg" alt="">
+                  <img src="images/history_rec.jpg" alt="">
                   <p>5月18日</p>
                   <dl>
                     <dt>2016年5月18日</dt>
@@ -652,6 +655,38 @@
             </dl>
           </div>
 
+          <div id="page">
+            <div class="next fr">»</div>
+            <div class="last fr">末页</div>
+            <ul class="pagingUl">
+              <li><a href="javascript:" class="activP">1</a></li>
+              <li><a href="javascript:" class="">2</a></li>
+              <li><a href="javascript:" class="">3</a></li>
+              <li><a href="javascript:" class="">4</a></li>
+              <li><a href="javascript:" class="">5</a></li>
+              <li><a href="javascript:" class="">6</a></li>
+              <li><a href="javascript:" class="">7</a></li>
+            </ul>
+            <div class="first fr">首页</div>
+            <div class="prv fr">«</div>
+          </div>
+
+          <script src="js/jquery.min.js"></script>
+          <script type="text/javascript" src="js/jquery.page.js"></script>
+          <script type="text/javascript">
+
+                 $(function(){
+                		$("#page").Page({
+                  	  totalPages: 9,//分页总数
+                  	  liNums: 7,//分页的数字按钮数(建议取奇数)
+                  	  activeClass: 'activP', //active 类样式定义
+                  	  callBack : function(page){
+                  			//console.log(page)
+                  	  }
+                    });
+                	})
+
+          </script>
 
         </div>
 
@@ -662,7 +697,7 @@
   </div>
 
 
-  <script src="/js/jquery.min.js" charset="utf-8"></script>
+  <!-- <script src="/js/jquery.min.js" charset="utf-8"></script> -->
   <script  type="text/javascript">
     // var tabs = document.getElementsByClassName('tabs ')[0].children;
     // var contents = document.getElementsByClassName("show")[0].children;
@@ -690,6 +725,11 @@
 
 
   </script>
+
+
+
+
+
   <%- include('lz_foot') %>
 
 
