--- a/views/index.ejs
+++ b/views/index.ejs
@@ -353,25 +353,61 @@
         </div>
         <% } %>
 
-
-          <div class="news">
-            <div class="n-left">
-              <h4>媒体报道</h4>
+        <div class="news">
+          <div class="n-left">
+            <h4>
+              媒体报道
               <a href="#">更多</a>
-              <div class="reportItem" style="background-image:url(../images/15058186120792628.jpg)">
+            </h4>
 
+            <div class="reportItem " >
+              <div class="one">
+                <img src="../images/15058186120792628.jpg" alt="" width="130px" height="90px">
               </div>
-              <!-- <p><a href="#">【新浪网】互联网金融平台微金所实缴注册资本增至1亿元</a></p> -->
-              <div class="reportItem" style="background-image:url(../images/15034835761816064.jpg)">
+              <div class="two">
+                <p>
+                  <a href="#">【新浪网】互联网金融平台微金所实缴注册资本增至1亿元</a>
+                  <span>2017-09-19</span>
+                </p>
+                <p class="news-p">2017年7月24日，互联网金融平台微金所正式宣布，经工商部门审核，已将实缴注册资本增加至人民币1亿元。记者登录国家企业信用信息公示系统查询，证实此公告的确属实。</p>
 
               </div>
 
             </div>
-            <div class="n-right">
+            <!-- <p><a href="#">【新浪网】互联网金融平台微金所实缴注册资本增至1亿元</a></p> -->
+            <div class="reportItem"  >
+             <div class="one">
+                 <img src="../images/15034835761816064.jpg" alt="" width="130px" height="90px">
+             </div>
+             <div class="two">
+               <p>
+                 <a href="#">【新浪网】互联网金融平台微金所实缴注册资本增至1亿元</a>
+                 <span>2017-09-19</span>
+               </p>
+               <p class="news-p">2017年7月24日，互联网金融平台微金所正式宣布，经工商部门审核，已将实缴注册资本增加至人民币1亿元。记者登录国家企业信用信息公示系统查询，证实此公告的确属实。</p>
+
+             </div>
+
 
             </div>
 
           </div>
+          <div class="n-right">
+            <h4>
+              微金所头条
+              <a href="#">更多</a>
+            </h4>
+            <% for (var i = 0; i < 6; i++) {%>
+              <p><a href="#">【微还款】 2017年10月30日-2017年11月5日还款公告</a></p>
+            <% } %>
+
+          </div>
+
+        </div>
+
+
+
+
 
 
     </div>
