--- a/views/h_xs-03.ejs
+++ b/views/h_xs-03.ejs
@@ -15,12 +15,12 @@
       <div class="xs-zy-1">
         <div class="xs-zy-2">
           <ul>
-            <li><a href="#">操作指南</a></li>
-            <li><a href="#">新手指引</a></li>
-            <li><a href="#">VIP投资人</a></li>
-            <li><a href="#">常见问题</a></li>
-            <li><a href="#">名词解释</a></li>
-            <li><a href="#">产品介绍</a></li>
+            <li><a href="/h/01">操作指南</a></li>
+            <li><a href="/h/02">新手指引</a></li>
+            <li><a href="/h/03">VIP投资人</a></li>
+            <li><a href="/h/04">常见问题</a></li>
+            <li><a href="/h/05">名词解释</a></li>
+            <li><a href="/h/06">产品介绍</a></li>
           </ul>
         </div>
         <div class="xs-zy-3">
