提交页面头部。。。。active

--- a/public/stylesheets/h_style.css
+++ b/public/stylesheets/h_style.css
@@ -120,8 +120,12 @@ body {
 }
 .xs-menu ul li a.active,
 .xs-menu ul li a:hover {
-    color: #2a6496;
+  color: #2a6496;
   border-bottom: 3px solid #dd3137;
+}
+.xs-menu ul li:last-child a:hover {
+  color: #333;
+  border-bottom: none;
 }
 .xs-menu-1 {
   vertical-align: middle;
