--- a/views/l-gy-gltd.ejs
+++ b/views/l-gy-gltd.ejs
@@ -17,13 +17,13 @@
           <!-- 菜单栏 -->
           <div class="gy-leftbox">
             <ul>
-              <li><span>公司简介</span></li>
-              <li><span>管理团队</span></li>
-              <li><span>董事团队</span></li>
-              <li><span>发展历程</span></li>
-              <li><span>合作伙伴</span></li>
-              <li><span>友情链接</span></li>
-              <li><span>联系我们</span></li>
+              <li><a href="/l">公司简介</a></li>
+              <li><a href="/l/gltd">管理团队</a></li>
+              <li><a href="/l/dstd">董事团队</a></li>
+              <li><a href="/l/fzlc">发展历程</a></li>
+              <li><a href="/l/hzhb">合作伙伴</a></li>
+              <li><a href="/l/yqlj">友情链接</a></li>
+              <li><a href="/l/lxwm">联系我们</a></li>
             </ul>
           </div>
           <!--右侧盒子-->
