--- a/views/lz_h_head.ejs
+++ b/views/lz_h_head.ejs
@@ -57,7 +57,7 @@
       <div class="xs-w">
         <div class="xs-logo">
           <a href="#">
-            <img src="/images/logo.png" alt="">
+            <img style="vertical-align: top;" src="/images/logo.png" alt="">
           </a>
           <a class="xs-logo-1" href="#">
             <img src="/images/anniversary.png" alt="">
@@ -66,13 +66,22 @@
         </div>
         <div class="xs-menu">
           <ul>
-            <li><a href="/">首页</a></li>
+            <!-- <li><a href="/">首页</a></li>
             <li><a href="/lz">我要投资</a></li>
             <li><a href="/z">安全保障</a></li>
             <li><a href="/h/01">新手专区</a></li>
             <li><a href="/q">新闻公告</a></li>
             <li><a href="/l">关于我们</a></li>
-            <li><a href="#">
+            <li><a href="#"> -->
+
+
+            <li><a class="<%= one %>" href="/">首页</a></li>
+            <li><a class="<%= two %>" href="/lz">我要投资</a></li>
+            <li><a class="<%= three %>" href="/z">安全保障</a></li>
+            <li><a class="<%= four %>" href="/h/01">新手专区</a></li>
+            <li><a class="<%= five %>" href="/q">新闻公告</a></li>
+            <li><a class="<%= six %>" href="/l">关于我们</a></li>
+            <li><a class="xs-menu-u-l-a" href="/g/logon">
               <span class="xs-menu-1"></span>
               我的账户
             </a></li>
