--- a/views/l-gy-hzhb.ejs
+++ b/views/l-gy-hzhb.ejs
@@ -17,13 +17,13 @@
           <!-- 菜单栏 -->
           <div class="gy-leftbox">
             <ul>
-              <li><a href="/about/gsjj">公司简介</a></li>
-              <li><a href="/about/gltd">管理团队</a></li>
-              <li><a href="/about/dstd">董事团队</a></li>
-              <li><a href="/about/fzlc">发展历程</a></li>
-              <li><a href="/about/hzhb">合作伙伴</a></li>
-              <li><a href="/about/yqlj">友情链接</a></li>
-              <li><a href="/about/lxwm">联系我们</a></li>
+              <li><a href="/l">公司简介</a></li>
+              <li><a href="/l/gltd">管理团队</a></li>
+              <li><a href="/l/dstd">董事团队</a></li>
+              <li><a href="/l/fzlc">发展历程</a></li>
+              <li><a href="/l/hzhb">合作伙伴</a></li>
+              <li><a href="/l/yqlj">友情链接</a></li>
+              <li><a href="/l/lxwm">联系我们</a></li>
             </ul>
           </div>
           <!--右侧盒子-->
