--- a/views/q_xw.ejs
+++ b/views/q_xw.ejs
@@ -55,7 +55,7 @@
     }
 
     .news-box .news-left ul li.active,
-    .news-box .news-left ul li:hover {
+    .news-box .news-left.q ul li:hover {
       background: #fff;
       border-left: 3px #dd2c37 solid;
     }
@@ -251,7 +251,7 @@
 
   <div class="new-bg">
     <div class="news-box">
-      <div class="news-left">
+      <div class="news-left q">
         <ul class="tabs">
           <li class="active" index="0">
             <a href="#">全部新闻</a>
