--- a/views/lz_connect.ejs
+++ b/views/lz_connect.ejs
@@ -30,12 +30,12 @@
         </dl>
         <dl>
             <dt>产品收益:</dt>
-            <dd class="active">全部</dd>
-            <dd>9%以下</dd>
-            <dd>9-10%</dd>
-            <dd>10-11%</dd>
-            <dd>11-12%</dd>
-            <dd>12%以上</dd>
+            <dd class="active" date-num="100" >全部</dd>
+            <dd date-num="0-9" >9%以下</dd>
+            <dd date-num="9-10" >9-10%</dd>
+            <dd date-num="10-11" >10-11%</dd>
+            <dd date-num="11-12" >11-12%</dd>
+            <dd date-num="12+" >12%以上</dd>
         </dl>
         <dl>
             <dt>产品类型:</dt>
