--- a/views/h_xs-04.ejs
+++ b/views/h_xs-04.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
 </head>
   <body>
     <%- include("lz_h_head") %>
-      <img src="/images/guide1.jpg" alt="" style="width: 100%;">
+      <img src="/images/guide1.jpg" alt="" style="width: 100%;margin-top:18px;">
       <div class="xs-zy">
       <div class="xs-zy-1">
         <div class="xs-zy-2">
