--- a/views/h_xs-05.ejs
+++ b/views/h_xs-05.ejs
@@ -7,7 +7,7 @@
   <!-- <link rel="stylesheet" href="/js/bootstrap.min.js"> -->
 </head>
     <%- include("lz_h_head") %>
-  <img src="/images/guide1.jpg" alt="" style="width: 100%;">
+  <img src="/images/guide1.jpg" alt="" style="width: 100%;margin-top:18px;">
   <div class="xs-zy">
   <div class="xs-zy-1">
     <div class="xs-zy-2">
