--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,7 +84,7 @@
       </div>
     </div>
     <div class="container con-bottom">
-      <div class="first">
+      <div class="z-first">
         <div class="unit">
           <span>
               <i class="icon iconfont icon-30 i-1"></i>
