--- a/views/h_xs-03.ejs
+++ b/views/h_xs-03.ejs
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="/h/01">操作指南</a></li>
             <li><a href="/h/02">新手指引</a></li>
-            <li><a href="/h/03">VIP投资人</a></li>
+            <li class="xs-a"><a href="/h/03">VIP投资人</a></li>
             <li><a href="/h/04">常见问题</a></li>
             <li><a href="/h/05">名词解释</a></li>
             <li><a href="/h/06">产品介绍</a></li>
@@ -428,6 +428,14 @@
 
     </div>
     <%- include("lz_foot") %>
+    <script src="/js/jquery.min.js" charset="utf-8"></script>
+    <script type="text/javascript">
+    var ul = $("ul li");
+    ul.click(function(){
+      location.href = $(this).find('a')[0].href;
+    });
+
+    </script>
 </body>
 
 </html>
