--- a/views/h_xs-04.ejs
+++ b/views/h_xs-04.ejs
@@ -18,7 +18,7 @@
             <li><a href="/h/01">操作指南</a></li>
             <li><a href="/h/02">新手指引</a></li>
             <li><a href="/h/03">VIP投资人</a></li>
-            <li><a href="/h/04">常见问题</a></li>
+            <li class="xs-a"><a href="/h/04">常见问题</a></li>
             <li><a href="/h/05">名词解释</a></li>
             <li><a href="/h/06">产品介绍</a></li>
           </ul>
@@ -220,6 +220,7 @@
       </div>
 
     </div>
+    <%- include("lz_foot") %>
     <script src="/js/jquery.min.js" charset="utf-8"></script>
     <script src="/js/bootstrap.min.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -235,6 +236,12 @@
           $(this).prev().data("index", "1");
         };
       });
+      var ul = $("ul li");
+      ul.click(function(){
+        location.href = $(this).find('a')[0].href;
+      });
+
+
     </script>
   </body>
 </html>
