--- a/public/sass/lz_css.scss
+++ b/public/sass/lz_css.scss
@@ -233,12 +233,11 @@
         display: block;
         height: 20px;
 
-        dt:hover,dd:hover,.active {
+        dd:hover,.active {
           background-color: red;
         }
 
         dt,dd {
-          cursor: pointer;
           position: relative;
           float: left;
           width: 72px;
@@ -247,7 +246,9 @@
           text-align: center;
           margin-right: 20px;
         }
-
+        dd {
+          cursor: pointer;
+        }
       }
 
       > a {
