--- a/public/stylesheets/lz_css.css
+++ b/public/stylesheets/lz_css.css
@@ -168,10 +168,9 @@
         margin: 20px 0 0;
         display: block;
         height: 20px; }
-        .lz-body-con .lz-con-head .lz-con-head-b > dl dt:hover, .lz-body-con .lz-con-head .lz-con-head-b > dl dd:hover, .lz-body-con .lz-con-head .lz-con-head-b > dl .active {
+        .lz-body-con .lz-con-head .lz-con-head-b > dl dd:hover, .lz-body-con .lz-con-head .lz-con-head-b > dl .active {
           background-color: red; }
         .lz-body-con .lz-con-head .lz-con-head-b > dl dt, .lz-body-con .lz-con-head .lz-con-head-b > dl dd {
-          cursor: pointer;
           position: relative;
           float: left;
           width: 72px;
@@ -179,6 +178,8 @@
           line-height: 30px;
           text-align: center;
           margin-right: 20px; }
+        .lz-body-con .lz-con-head .lz-con-head-b > dl dd {
+          cursor: pointer; }
       .lz-body-con .lz-con-head .lz-con-head-b > a {
         position: absolute;
         top: 0px;
